--- a/index.html
+++ b/index.html
@@ -1,25 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="/logo192.png" />
-    <link rel="manifest" href="/manifest.json" />
-    <title>이고잉의 리액트</title>
-    <script defer="defer" src="/static/js/main.dd3a239b.js"></script>
-    <link href="/static/css/main.073c9b0a.css" rel="stylesheet" />
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="app_root">
-      여기 들어가는 내용은 어디 있는걸까? => "src 안의 index.js" root 안쪽의
-      내용은 index.js 에서 수정
-    </div>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/20220606_react/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/20220606_react/logo192.png"/><link rel="manifest" href="/20220606_react/manifest.json"/><title>이고잉의 리액트</title><script defer="defer" src="/20220606_react/static/js/main.d1f10cc9.js"></script><link href="/20220606_react/static/css/main.073c9b0a.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="app_root">여기 들어가는 내용은 어디 있는걸까? => "src 안의 index.js" root 안쪽의 내용은 index.js 에서 수정</div></body></html>
